# yarrr

./: .gitignore  Cargo.toml  README.md  build_flamegraph.sh  job.json
.github/workflows/: build.yml
benches/: single_thread_benchmarks.rs
examples/: final_render.rs  final_render_pool.rs  fov_camera.rs  fov_camera2.rs  materials.rs  materials_pool.rs
src/: body.rs  body_static.rs  camera.rs  image.rs  lib.rs  linalg.rs  main.rs  material.rs  ray.rs  renderer.rs
tests/: lib_test.rs  linalg_test.rs  ray_test.rs  utils.rs
