[package]
name = "yarrr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
indicatif = "0.17"
rand = "0.8.4"
image = "0.24.4"

[dev-dependencies]
float-cmp = "0.9"
criterion = "0.3"

[[bench]]
name = "single_thread_benchmarks"
harness = false
